--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "format": "npx purs-tidy format-in-place \"**/**/*.purs\"",
     "watch:spago": "spago build",
     "watch:esbuild": "node ./scripts/watch.mjs",
+    "watch:tailwind": "npx tailwindcss -i ./src/index.css -o ./public/index.css --watch",
     "watch": "run-p watch:*",
     "build:spago": "spago build",
     "build:esbuild": "node ./scripts/build.mjs",
+    "build:tailwind": "npx tailwindcss -i ./src/index.css -o ./public/index.css",
     "build": "run-s build:*"
   },
   "author": "zer0-star",
@@ -17,6 +19,7 @@
   "devDependencies": {
     "esbuild": "^0.15.5",
     "npm-run-all": "^4.1.5",
-    "purs-tidy": "^0.9.2"
+    "purs-tidy": "^0.9.2",
+    "tailwindcss": "^3.1.8"
   }
 }
