github action nanimo wakaran

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -42,16 +42,12 @@ jobs:
         uses: cachix/install-nix-action@v17
         with:
           nix_path: nixpkgs=channel:nixos-unstable
-      - name: Build with nix-shell
-        uses: workflow/nix-shell-action@v3.0.2
-        with:
-          script: |
-            npm ci
-            npm run build
-      # - name: Install NPM packages
-      #   run: npm ci
-      # - name: Build website
-      #   run: npm run build
+      - name: use nix-shell
+        run: nix-shell
+      - name: Install NPM packages
+        run: npm ci
+      - name: Build website
+        run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
