--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,10 +26,10 @@ jobs:
         uses: cachix/install-nix-action@v17
         with:
           nix_path: nixpkgs=channel:nixos-unstable
-      - uses: cachix/cachix-action@v10
-        with:
-          name: zer0-star-site
-          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+      # - uses: cachix/cachix-action@v10
+      #   with:
+      #     name: zer0-star-site
+      #     authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - name: Cache npm dependencies
         uses: actions/cache@v3
         with:
