--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -22,10 +22,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-      - name: Install Nix
-        uses: cachix/install-nix-action@v17
-        with:
-          nix_path: nixpkgs=channel:nixos-unstable
+      - name: Setup PureScript
+        uses: purescript-contrib/setup-purescript@main
+      # - name: Install Nix
+      #   uses: cachix/install-nix-action@v17
+      #   with:
+      #     nix_path: nixpkgs=channel:nixos-unstable
       # - uses: cachix/cachix-action@v10
       #   with:
       #     name: zer0-star-site
@@ -46,12 +48,12 @@ jobs:
           key: ${{ runner.os }}-spago-${{ hashFiles('**/*.dhall') }}
           restore-keys: |
             ${{ runner.os }}-spago-
-      - name: use nix-shell and build
-        run: nix-shell --run "npm ci && npm run build"
-      # - name: Install NPM packages
-      #   run: npm ci
-      # - name: Build website
-      #   run: npm run build
+      # - name: use nix-shell and build
+      #   run: nix-shell --run "npm ci && npm run build"
+      - name: Install NPM packages
+        run: npm ci
+      - name: Build website
+        run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
