--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       # - name: Setup Node.js
       #   uses: actions/setup-node@v3
       #   with:
@@ -20,7 +20,7 @@ jobs:
       # - name: Setup PureScript
       #   uses: purescript-contrib/setup-purescript@main
       - name: Install Nix
-        uses: cachix/install-nix-action@v18
+        uses: cachix/install-nix-action@v31
         with:
           nix_path: nixpkgs=channel:nixos-unstable
       # - uses: cachix/cachix-action@v10
@@ -50,15 +50,11 @@ jobs:
       # - name: Build website
       #   run: npm run build
       - name: Build site
-        run: |
-          nix build
-          # fix permission problem with nix (https://github.com/actions/deploy-pages/issues/58)
-          cp --recursive --dereference --no-preserve=mode,ownership result/public dist
+        run: nix build
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v3
         with:
-          # path: ./result/public
-          path: ./dist
+          path: ./result/public
 
   deploy:
     runs-on: ubuntu-latest
@@ -73,4 +69,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v4
